--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-:root{
-  --theme-color: ##00a0a0;
+/* --------------------
+        全体
+-------------------- */
+
+:root {
+  --theme-color: #00a0a0;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
 
-html.body {
+html, body {
   width: 100%;
   height: 100%;
 }
@@ -16,46 +20,54 @@ body {
   padding: 30px;
   color: #333;
 }
-/*---- 
-見出し
------*/
-h1,h2,h3 {
+
+/* --------------------
+        見出し
+-------------------- */
+
+h1, h2, h3 {
   color: var(--theme-color);
-  border-bottom: dashed 0.1em var(--them-color);
+  border-bottom: dashed 0.1em var(--theme-color);
 }
 
-/*----
-リンク
-----*/
-a{
+/* --------------------
+        リンク
+-------------------- */
+
+a {
   color: var(--theme-color);
   text-decoration: none;
 }
 
-ul{
-  list-style:none;
+/* --------------------
+        リスト
+-------------------- */
+
+ul {
+  list-style: none;
 }
-li:before{
-  content:"★";
+li:before {
+  content: "★";
   color: var(--theme-color);
 }
 
-/*---
-表
----*/
+/* --------------------
+          表
+-------------------- */
+
 table {
-  border-spacing:0;
+  border-spacing: 0;
   border-collapse: collapse;
   border: solid 1px #f0f0f0;
   min-width: 70%;
 }
-tr{
+tr {
   background-color: #fff;
 }
 tr:nth-child(2n) {
   background-color: #f9f9f9;
 }
-th{
+th {
   background: var(--theme-color);
   color: #fff;
 }
@@ -63,6 +75,3 @@ th, td {
   border: solid 1px #f0f0f0;
   padding: 0.5rem;
 }
-
-
-
